--- a/Homework_23/site_pug/package.json
+++ b/Homework_23/site_pug/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "express-myconnection": "^1.0.4",
+    "mysql": "^2.15.0",
+    "pug": "^2.0.3"
+  }
 }
